# GitSync

./: .gitignore  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  fvm_config.json  l10n.yaml  pubspec.yaml  untranslated.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  FEATURE_REQUEST.yaml
.github/workflows/: generate-apk-release.yml
.maestro/: Cargo.toml  README.md  config.yaml
.maestro/auth/: gitea.yaml  github.yaml  https.yaml  ssh.yaml
.maestro/common/: back.yaml  cleanup.yaml  clear_state.yaml  disable_all_files_access.yaml  kill.yaml  launch_notif_perm.yaml  launch_stls_no_perms.yaml
.maestro/generate_screenshots/: auth.yaml  auto_sync_settings.yaml  homepage.yaml  manual_sync.yaml  merge_conflict.yaml  scheduled_sync_settings.yaml  select_apps.yaml  settings.yaml  settings_bottom.yaml  settings_top.yaml  tile_sync_settings.yaml
.maestro/onboarding/: negative.yaml  positive.yaml
.maestro/src/: env.rs.template  generate_screenshots.rs  main.rs
android/app/: build.gradle  proguard-rules.pro
integration_test/: simple_test.dart
ios/: ForceSyncWidgetExtension.entitlements  Podfile
ios/ForceSyncWidget/: ForceSyncWidget.swift  ForceSyncWidgetBundle.swift
ios/ManualSyncWidget/: ManualSyncWidget.swift  ManualSyncWidgetBundle.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: gitsync_service.dart  global.dart  main.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/api/: git_manager.rs  mod.rs
rust/src/api/test/: .env  git_manager.rs  mod.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
(+216 files in other folders)
