[package]
name = "rust_lib_GitSync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
git2 = "0.20.0"
openssl = { version = "0.10.35", features = ["vendored"] }
osshkeys = "0.7.0"
regex = "1.10.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
